# real-value-estimator

./: .env.example  main.py  pyproject.toml
src/inference/: inference.py
src/io_tools/: io.py
src/learning/: config.py  fit_model.py  ml_model.py  preprocessing.py
src/utils/: config.py
