[tool.poetry]
name = "realvaluemllearning"
version = "0.1.0"
description = ""
authors = ["serga <sergandri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pandas = "^2.2.3"
catboost = "^1.2.7"
scikit-learn = "^1.5.2"
sqlalchemy = "^2.0.40"
clickhouse-sqlalchemy = "^0.3.2"
clickhouse-driver = "^0.2.9"
clickhouse-connect = "^0.8.17"
python-dotenv = "^1.1.0"
pyarrow = "^19.0.1"
optuna = "^4.3.0"
optuna-integration = {extras = ["catboost"], version = "^4.3.0"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
